# AICourseTGroup

./: README.md  pyproject.toml
